@@ -43,6 +43,10 @@ Lintian-Tags: dh-quilt-addon-but-quilt-source-format
 Fix-Script: dm-upload-allowed-is-obsolete.sh
 Lintian-Tags: dm-upload-allowed-is-obsolete
 
+Fix-Script: empty-debian-source-options.py
+
+Fix-Script: empty-debian-patches-series.py
+
 Fix-Script: file-contains-trailing-whitespace.sh
 Lintian-Tags: file-contains-trailing-whitespace
 
@@ -51,6 +55,9 @@ Lintian-Tags: homepage-field-uses-insecure-uri
 
 Fix-Script: insecure-copyright-format-uri.sh
 Lintian-Tags: insecure-copyright-format-uri
+
+Fix-Script: maintainer-script-without-set-e.py
+Lintian-Tags: maintainer-script-without-set-e
 
 Fix-Script: malformed-dm-upload-allowed.sh
 Lintian-Tags: malformed-dm-upload-allowed
@@ -125,7 +132,3 @@ Lintian-Tags: xs-testsuite-field-in-debian-control
 
 Fix-Script: xs-vcs-field-in-debian-control.sh
 Lintian-Tags: xs-vcs-field-in-debian-control
-
-Fix-Script: empty-debian-source-options.py
-
-Fix-Script: empty-debian-patches-series.py
