@@ -1,0 +1,5 @@
+#!/bin/sh -e
+# Foo
+# bar
+
+echo "blah"
