@@ -1,0 +1,7 @@
+#!/bin/sh
+# Foo
+# bar
+
+set -e
+
+echo "blah"
