@@ -19,6 +19,7 @@ lintian-brush (0.14) UNRELEASED; urgency=medium
     lintian tag).
   * Support updating debhelper-compat version in packages that use the
     debhelper-compat relation in Build-Depends.
+  * Add fixer for maintainer-script-without-set-e.
 
  -- Jelmer Vernooĳ <jelmer@debian.org>  Sat, 16 Feb 2019 15:11:25 +0000
 
